--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Konciar: Your AI concierge for easy restaurant bookings, takeout, and inquiries in Korea—no Korean phone number or language skills required." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>konciar</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places&v=weekly"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places&v=weekly" defer></script>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
